fixes TRAIN-49 seminar detail mobile align

--- a/dev/assets/sass/_detail.scss
+++ b/dev/assets/sass/_detail.scss
@@ -2,16 +2,27 @@
   font-weight: bold;
   color: #008FC7;
 }
-.popover-content {
-  li {
-padding-left: 0!important;
+
+#register-seminars {
+    @media screen and (max-width: 990px) {
+    ul {
+      padding-left: 10px!important;
+    }
   }
 }
+
+.popover-content {
+  li {
+    padding-left: 0 !important;
+  }
+}
+
 .slide-toggle {
   ul {
     padding-left: 0;
   }
 }
+
 .seminar-loc--block {
   display: inline-block;
   width: 50%;
@@ -68,9 +79,7 @@ padding-left: 0!important;
       padding-left: 20px;
     }
 
-    li:last-of-type {
-
-    }
+    li:last-of-type {}
   }
 }
 
@@ -141,6 +150,10 @@ padding-left: 0!important;
   .city-name {
     font-size: 17px;
     font-style: italic;
+  }
+
+  @mixin below-tablet-portrait {
+    padding-left: 0;
   }
 }
 
